[FDCORE-972] alignment issue fix for invoice popup

--- a/public/src/page/admin/_billing.scss
+++ b/public/src/page/admin/_billing.scss
@@ -449,9 +449,12 @@ input[type=text].input-agent-count{
 	color: #8E8E8E;
 }
 
-.invoice-table.table th{
-	border-top: 1px solid #535353;
-	border-bottom: 1px solid #A6A6A6;
+.invoice-table.table{
+	@include text-align(left);
+	th{
+		border-top: 1px solid #535353;
+		border-bottom: 1px solid #A6A6A6;
+	}
 }
 
 .ft-wt{
